@@ -274,7 +274,13 @@ examples/ostest
 examples/pashello
 ^^^^^^^^^^^^^^^^^
 
-  This is "Hello, World" implemented via the Pascal P-Code interpreter
+  This is "Hello, World" implemented via the Pascal P-Code interpreter. In
+  order to use this example, you must first download and install the
+  NuttX pascal module.  After unpacking the pascal module, you can find
+  installation instructions in pascal/nuttx/README.txt.
+
+  The correct install location for the NuttX examples and build files is
+  apps/interpreters.
 
 examples/pipe
 ^^^^^^^^^^^^^
