@@ -32,3 +32,7 @@
 	  verify NXFFS.
 
 6.3 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
+
+	* apps/interpreter: Add a directory to hold interpreters.  The Pascal add-
+	  on module now installs and builds under this directory.
+
